--- a/homepage.html
+++ b/homepage.html
@@ -13,28 +13,15 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(45deg, #6a11cb 0%, #2575fc 100%);
-            background-size: 200% 200%;
-            animation: gradientAnimation 15s ease infinite;
+            background-color: #f5f5f7;
             font-family: Arial, sans-serif;
-            color: #fff;
-        }
-
-        @keyframes gradientAnimation {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        @keyframes fadeIn {
-            0% { opacity: 0; transform: translateY(-20px); }
-            100% { opacity: 1; transform: translateY(0); }
+            color: #333;
         }
 
         .title {
             font-size: 3em;
             margin-bottom: 20px;
-            animation: fadeIn 2s ease;
+            color: #333;
         }
 
         .search-bar {
@@ -46,12 +33,13 @@
         
         .search-bar input {
             width: 100%;
-            padding: 10px 20px;
+            padding: 15px 20px;
             border-radius: 25px;
-            border: 1px solid #ddd;
+            border: 1px solid #ccc;
             font-size: 18px;
-            background-color: rgba(255, 255, 255, 0.7); /* Light background for input */
-            color: #333; /* Dark text color for input */
+            background-color: #fff;
+            color: #333;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .shortcuts {
@@ -62,35 +50,36 @@
         }
 
         .shortcut {
-            width: 100px;
-            height: 100px;
+            width: 80px;
+            height: 80px;
             margin: 10px;
             text-align: center;
-            background-color: rgba(255, 255, 255, 0.3); /* Semi-transparent background for shortcuts */
-            padding: 15px;
+            background-color: #fff;
+            padding: 10px;
             border-radius: 10px;
-            transition: background-color 0.3s ease, transform 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .shortcut:hover {
-            background-color: rgba(255, 255, 255, 0.5); /* Lighten background on hover */
-            transform: scale(1.1); /* Scale up on hover */
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         .shortcut img {
-            width: 50px;
-            height: 50px;
-            border-radius: 10px;
+            width: 40px;
+            height: 40px;
+            border-radius: 5px;
         }
 
         .shortcut p {
             margin: 5px 0 0;
-            font-size: 14px;
-            color: #fff;
+            font-size: 12px;
+            color: #333;
         }
 
         .shortcut a {
@@ -104,32 +93,8 @@
     <div class="search-bar">
         <input type="text" placeholder="Search the web" id="searchInput">
     </div>
-    <div class="shortcuts">
-        <div class="shortcut">
-            <a href="https://www.google.com">
-                <img src="https://www.google.com/images/branding/product/ico/googleg_lodp.ico" alt="Google">
-                <p>Google</p>
-            </a>
-        </div>
-        <div class="shortcut">
-            <a href="https://www.youtube.com">
-                <img src="https://www.youtube.com/s/desktop/8b2ff7e2/img/favicon_32x32.png" alt="YouTube">
-                <p>YouTube</p>
-            </a>
-        </div>
-        <div class="shortcut">
-            <a href="https://www.facebook.com">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/yD/r/d4ZIVX-5C-b.ico" alt="Facebook">
-                <p>Facebook</p>
-            </a>
-        </div>
-        <div class="shortcut">
-            <a href="https://www.twitter.com">
-                <img src="https://abs.twimg.com/favicons/twitter.ico" alt="Twitter">
-                <p>Twitter</p>
-            </a>
-        </div>
-        <!-- Add more shortcuts as needed -->
+    <div class="shortcuts" id="shortcuts">
+        <!-- Shortcuts will be injected here dynamically -->
     </div>
     <script>
         document.getElementById('searchInput').addEventListener('keypress', function(e) {
@@ -137,6 +102,29 @@
                 let query = e.target.value;
                 window.location.href = 'https://www.google.com/search?q=' + encodeURIComponent(query);
             }
+        });
+
+        const shortcuts = [
+            { name: 'Google', domain: 'google.com' },
+            { name: 'YouTube', domain: 'youtube.com' },
+            { name: 'Facebook', domain: 'facebook.com' },
+            { name: 'Twitter', domain: 'twitter.com' }
+        ];
+
+        const shortcutsContainer = document.getElementById('shortcuts');
+
+        shortcuts.forEach(shortcut => {
+            const shortcutElement = document.createElement('div');
+            shortcutElement.classList.add('shortcut');
+
+            const imgUrl = `https://logo.clearbit.com/${shortcut.domain}`;
+            shortcutElement.innerHTML = `
+                <a href="https://${shortcut.domain}">
+                    <img src="${imgUrl}" alt="${shortcut.name}">
+                    <p>${shortcut.name}</p>
+                </a>
+            `;
+            shortcutsContainer.appendChild(shortcutElement);
         });
     </script>
 </body>
