Remove logo.clearbit from homepage.html
Replaced Clearbit logo API with Google Favicon API due to deprecation notice.
The logo.clearbit.com service will be discontinued on December 1, 2025, so this commit updates the imgUrl logic to use Google’s favicon service instead:
https://www.google.com/s2/favicons?sz=64&domain=....
This ensures logos will continue to display correctly after the Clearbit API shutdown.

--- a/homepage.html
+++ b/homepage.html
@@ -344,7 +344,7 @@
                 shortcutElement.classList.add('shortcut');
                 shortcutElement.style.animation = `fadeInShortcuts ${0.5 + index * 0.1}s ease forwards`;
 
-                const imgUrl = `https://logo.clearbit.com/${shortcut.domain}`;
+                const imgUrl = `https://www.google.com/s2/favicons?sz=64&domain=${shortcut.domain}`;
                 shortcutElement.innerHTML = `
                     <a href="https://${shortcut.domain}">
                         <img src="${imgUrl}" alt="${shortcut.name}">
